--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "$schema": "https://getcomposer.org/schema.json",
-    "name": "miraiportal/dynasty-starter-kit",
+    "name": "miraiportal/advent",
     "type": "project",
     "description": "The skeleton application for the Laravel framework.",
     "keywords": [
